--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,14 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.5</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
